<resources>
    <string name="app_name">ProdutosGinasio</string>
    <string name="txt_username">Introduza o username</string>
    <string name="txt_password">Introduza a password</string>
    <string name="txt_login">Login</string>
    <string name="txt_email">Introduza o email</string>
    <string name="txt_ip">Introduza o IP</string>
    <string name="txt_ligacao_servidor">Ligar ao servidor</string>
    <string name="txt_registar">Registar</string>
    <string name="ndOpen">Open</string>
    <string name="ndClose">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_preco">Preço:</string>
    <string name="txt_nome">Nome:</string>
    <string name="txt_finalizar_compra">Finalizar Compra</string>
    <string name="txt_carrinho_de_compras">Carrinho de Compras</string>
    <string name="txt_total">Total:</string>
    <string name="txt_historico_de_compras">Histórico de Compras</string>
    <string name="txt_compra_realizada_em">Compra realizada em:</string>
    <string name="txt_data">Data</string>
    <string name="txt_hora">Hora</string>
    <string name="txt_atualizar_perfil">Atualizar Perfil</string>
    <string name="txt_historico_de_encomendas">Histórico de Encomendas</string>
    <string name="txt_cupao">Cupão</string>
    <string name="txt_aplicar">Aplicar</string>
    <string name="txt_inserir_codigo">Inserir código do cupão</string>
    <string name="txt_dados_do_utilizador">Dados do Utilizador:</string>
    <string name="txt_morada">Morada</string>
    <string name="txt_telemóvel">Telemóvel</string>
    <string name="txt_nif">NIF</string>
    <string name="txt_metodos_de_pagamento">Métodos de Pagamento</string>
    <string name="txt_metodo_de_entrega">Método de Entrega</string>
</resources>