<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FinalizarCompraActivity">

    <!-- Título do Finalizar Compra -->
    <TextView
        android:id="@+id/tvTituloFinalizarCompra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_finalizar_compra"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="16dp"
        android:gravity="center" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <!-- Título para o Spinner -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_metodos_de_pagamento"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:gravity="start" />

        <!-- Spinner para Métodos de Pagamento -->
        <Spinner
            android:id="@+id/metodosdepagamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <!-- Título para o Spinner -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_metodo_de_entrega"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:gravity="start" />

        <!-- Spinner para Métodos de Pagamento -->
        <Spinner
            android:id="@+id/metodosdeentrega"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Título: Cupão -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_cupao"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />
        <!-- Campo de Texto para o Código do Cupão -->
        <EditText
            android:id="@+id/editTextCupao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/txt_inserir_codigo"
            android:inputType="text" />

        <!-- Botão para Aplicar o Cupão -->
        <Button
            android:id="@+id/buttonAplicarCupao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_aplicar"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1" />

    <!-- Título: Dados do Utilizador -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_dados_do_utilizador"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="8dp"
        android:gravity="center" />

    <!-- Contêiner para Dados do Utilizador -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Linha: Email -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_email"
                android:textStyle="bold"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"/>
        </LinearLayout>

        <!-- Linha: Morada -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_morada"
                android:textStyle="bold"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/tvMorada"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />
        </LinearLayout>

        <!-- Linha: Telefone -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_telemóvel"
                android:textStyle="bold"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/tvTelefone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />
        </LinearLayout>

        <!-- Linha: NIF -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_nif"
                android:textStyle="bold"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/tvNIF"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />
        </LinearLayout>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1" />

    <!-- Secção de Total -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:background="@color/white"
        android:elevation="4dp"
        android:gravity="start|center_vertical">

        <!-- Texto para o Total -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_total"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginEnd="8dp" />

        <!-- Valor do Total -->
        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black" />
    </LinearLayout>

    <!-- Botão para Finalizar a Compra -->
    <Button
        android:id="@+id/btnFinalizarCompra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_finalizar_compra"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_margin="16dp" />

</LinearLayout>
