<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CarrinhoDeComprasFragment">

    <!-- Título do Carrinho -->
    <TextView
        android:id="@+id/tvTituloCarrinho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_carrinho_de_compras"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="16dp"
        android:gravity="center" />

    <!-- Lista de Produtos no Carrinho -->
    <ListView
        android:id="@+id/lvProdutosCarrinho"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <!-- Seção de Total -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:background="@color/white"
        android:elevation="4dp"
        android:gravity="start|center_vertical">

        <!-- Texto para o Total -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_total"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginEnd="8dp" />

        <!-- Valor do Total -->
        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black" />
    </LinearLayout>

    <!-- Botão para Finalizar a Compra -->
    <Button
        android:id="@+id/btnFinalizarCompra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_finalizar_compra"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_margin="16dp" />

    />

</LinearLayout>
