<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imgCapa"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ic_action_historico_compras" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_compra_realizada_em"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/tvData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_data"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginEnd="8dp"/>

            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:background="@android:color/darker_gray"
                android:layout_marginEnd="8dp"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/tvHora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_hora"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:gravity="center"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
